# board_cut_optimizer

./: .gitignore  Cargo.toml  LICENSE  README.md  board_cut_optimizer.py  board_data_to_csv.py  board_gui_app.py  board_gui_app.spec  package_release.ps1  requirements.txt  thickness_weight.csv
crates/board-cli/: Cargo.toml
crates/board-core/: Cargo.toml
crates/board-core/src/: lib.rs  types.rs
crates/board-desktop/: Cargo.toml
crates/board-desktop/src/: main.rs
crates/board_cut_optimizer_cli/: Cargo.toml
crates/board_cut_optimizer_core/: Cargo.toml
crates/board_cut_optimizer_core/src/: packing.rs  parsing.rs  report.rs
crates/board_cut_optimizer_desktop/: Cargo.toml
crates/board_cut_optimizer_desktop/src/: main.rs
samples/: converter_input_runtime_5.txt  test_basic.csv  test_chinese_headers.csv
