[workspace]
members = [
    "crates/board_cut_optimizer_core",
    "crates/board_cut_optimizer_cli",
    "crates/board_cut_optimizer_desktop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
arboard = "3"
ab_glyph = "0.2"
calamine = "0.26"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
image = "0.25"
imageproc = "0.25"
iced = { version = "0.12", features = ["image"] }
once_cell = "1"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
