[package]
name = "board-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
board-core = { path = "../board-core" }

[[bin]]
name = "board_data_to_csv"
path = "src/bin/board_data_to_csv.rs"

[[bin]]
name = "board_cut_optimizer"
path = "src/bin/board_cut_optimizer.rs"
