[package]
name = "board-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ab_glyph = { workspace = true }
calamine = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
