[package]
name = "board-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
board-core = { path = "../board-core" }
iced = { workspace = true }
image = { workspace = true }
once_cell = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "board_gui_app"
path = "src/main.rs"
