[package]
name = "board_cut_optimizer_desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
board_cut_optimizer_core = { path = "../board_cut_optimizer_core", package = "board_cut_optimizer_core" }
iced = { workspace = true }
image = { workspace = true }
once_cell = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "board_cut_optimizer"
path = "src/main.rs"
